--- a/artist/georges-seurat-bio.html
+++ b/artist/georges-seurat-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>Georges Seurat</h1>
 		<hr class="georges">
-		<a href="georges-seurat.html" class="btn">Return</a>
+		<a href="georges-seurat.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>Georges-Pierre Seurat, 2 December 1859, Paris, French</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>Georges-Pierre Seurat</b> (UK: /ˈsɜːrɑː, -rʌ/ SUR-ah, -⁠uh, US: /sʊˈrɑː/ suu-RAH,[1][2][3][4][5] French: [ʒɔʁʒ pjɛʁ sœʁa];[6] 2 December 1859 – 29 March 1891) was a French post-Impressionist artist. He is best known for devising the painting techniques known as chromoluminarism as well as pointillism. While less famous than his paintings, his conté crayon drawings have also garnered a great deal of critical appreciation. Seurat's artistic personality combined qualities that are usually supposed to be opposed and incompatible: on the one hand, his extreme and delicate sensibility, on the other, a passion for logical abstraction and an almost mathematical precision of mind.[7] His large-scale work A Sunday Afternoon on the Island of La Grande Jatte (1884–1886) altered the direction of modern art by initiating Neo-impressionism, and is one of the icons of late 19th-century painting.[8]
 					Georges-Pierre Seurat (UK: /ˈsɜːrɑː, -rʌ/ SUR-ah, -⁠uh, US: /sʊˈrɑː/ suu-RAH,[1][2][3][4][5] French: [ʒɔʁʒ pjɛʁ sœʁa];[6] 2 December 1859 – 29 March 1891) was a French post-Impressionist artist. He is best known for devising the painting techniques known as chromoluminarism as well as pointillism. While less famous than his paintings, his conté crayon drawings have also garnered a great deal of critical appreciation. Seurat's artistic personality combined qualities that are usually supposed to be opposed and incompatible: on the one hand, his extreme and delicate sensibility, on the other, a passion for logical abstraction and an almost mathematical precision of mind.[7] His large-scale work A Sunday Afternoon on the Island of La Grande Jatte (1884–1886) altered the direction of modern art by initiating Neo-impressionism, and is one of the icons of late 19th-century painting.[8]
 				</p>
@@ -61,7 +61,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>Georges-Pierre Seurat</b> was born on 2 December 1859 in Paris, at 60 rue de Bondy (now rue René Boulanger). The Seurat family moved to 136 boulevard de Magenta (now 110 boulevard de Magenta) in 1862 or 1863.[9] His father, Antoine Chrysostome Seurat, originally from Champagne, was a former legal official who had become wealthy from speculating in property, and his mother, Ernestine Faivre, was from Paris.[10] Georges had a brother, Émile Augustin, and a sister, Marie-Berthe, both older. His father lived in Le Raincy and visited his wife and children once a week at boulevard de Magenta.[11]
 					Georges Seurat first studied art at the École Municipale de Sculpture et Dessin, near his family's home in the boulevard Magenta, which was run by the sculptor Justin Lequien.[12][13] In 1878 he moved on to the École des Beaux-Arts where he was taught by Henri Lehmann, and followed a conventional academic training, drawing from casts of antique sculpture and copying drawings by old masters.[12] Seurat's studies resulted in a well-considered and fertile theory of contrasts: a theory to which all his work was thereafter subjected.[14] His formal artistic education came to an end in November 1879, when he left the École des Beaux-Arts for a year of military service.[13]
 					After a year at the Brest Military Academy, he returned to Paris where he shared a studio with his friend Aman-Jean, while also renting a small apartment at 16 rue de Chabrol.[10] For the next two years, he worked at mastering the art of monochrome drawing. His first exhibited work, shown at the Salon, of 1883, was a Conté crayon drawing of Aman-Jean.[15] He also studied the works of Eugène Delacroix carefully, making notes on his use of color.[12]
