--- a/artist/james-bio.html
+++ b/artist/james-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>James Abbott McNeill Whister</h1>
 		<hr class="james">
-		<a href="james.html" class="btn">Return</a>
+		<a href="james.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>James Abbott Whistler, July 11, 1834, Lowell, US</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>James Abbott McNeill Whistler</b> RBA (/ˈwɪslər/; July 11, 1834 – July 17, 1903) was an American artist active during the American Gilded Age and based primarily in the United Kingdom. He was averse to sentimentality and moral allusion in painting, and a leading proponent of the credo "art for art's sake". His signature for his paintings took the shape of a stylized butterfly possessing a long stinger for a tail.[1] The symbol combined both aspects of his personality: his art is marked by a subtle delicacy, while his public persona was combative. He found a parallel between painting and music, and entitled many of his paintings "arrangements", "harmonies", and "nocturnes", emphasizing the primacy of tonal harmony.[2] His most famous painting, Arrangement in Grey and Black No. 1 (1871), commonly known as Whistler's Mother, is a revered and often parodied portrait of motherhood. Whistler influenced the art world and the broader culture of his time with his theories and his friendships with other leading artists and writers.[3]
 					American Gilded Age and based primarily in the United Kingdom. He was averse to sentimentality and moral allusion in painting, and a leading proponent of the credo "art for art's sake". His signature for his paintings took the shape of a stylized butterfly possessing a long stinger for a tail.[1] The symbol combined both aspects of his personality: his art is marked by a subtle delicacy, while his public persona was combative. He found a parallel between painting and music, and entitled many of his paintings "arrangements", "harmonies", and "nocturnes", emphasizing the primacy of tonal harmony.[2] His most famous painting, Arrangement in Grey and Black No. 1 (1871), commonly known as Whistler's Mother, is a revered and often parodied portrait of motherhood. Whistler influenced the art world and the broader culture of his time with his theories and his friendships with other leading artists and writers.[3]
 				</p>
@@ -61,7 +61,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>James Abbott Whistler</b> was born in Lowell, Massachusetts on July 11, 1834,[4][5][6] the first child of Anna McNeill Whistler and George Washington Whistler, and the brother of Confederate surgeon Dr. William McNeill Whistler. His father was a railroad engineer, and Anna was his second wife. James lived the first three years of his life in a modest house at 243 Worthen Street in Lowell.[7] The house is now the Whistler House Museum of Art, a museum dedicated to him.[8] He claimed St. Petersburg, Russia as his birthplace during the Ruskin trial: "I shall be born when and where I want, and I do not choose to be born in Lowell."[9]
 					The family moved from Lowell to Stonington, Connecticut in 1837, where his father worked for the Stonington Railroad. Three of the couple's children died in infancy during this period.[7] Their fortunes improved considerably in 1839 when his father became chief engineer for the Boston & Albany Railroad,[10] and the family built a mansion in Springfield, Massachusetts, where the Wood Museum of History now stands. They lived in Springfield until they left the United States in late 1842.[11] Nicholas I of Russia learned of George Whistler's ingenuity in engineering the Boston & Albany Railroad, and he offered him a position in 1842 engineering a railroad from St. Petersburg to Moscow, and the family moved to St. Petersburg in the winter of 1842/43.[12]
 					Whistler was a moody child prone to fits of temper and insolence, and he often drifted into periods of laziness after bouts of illness. His parents discovered that drawing often settled him down and helped focus his attention.[13] In later years, he played up his mother's connection to the American South and its roots, and he presented himself as an impoverished Southern aristocrat, although it remains unclear to what extent he truly sympathized with the Southern cause during the American Civil War. He adopted his mother's maiden name after she died, using it as an additional middle name.[12]
