--- a/artist/johannes-bio.html
+++ b/artist/johannes-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>Johannes Vermeer</h1>
 		<hr class="johannes">
-		<a href="johannes.html" class="btn">Return</a>
+		<a href="johannes.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>Johannes Vermeer, October 1632, Holland, Dutch Republic</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>Johannes Vermeer</b> (in Dutch, [vərˈmeːr]; in English, /vɜːrˈmɛər/ or /vɜːrˈmɪər/ vur-MEER, see below; October 1632 – December 1675) was a Dutch Baroque Period[3] painter who specialized in domestic interior scenes of middle class life. During his lifetime, he was a moderately successful provincial genre painter, recognized in Delft and The Hague. Nonetheless, he produced relatively few paintings and evidently was not wealthy, leaving his wife and children in debt at his death.[4]
 					Vermeer worked slowly and with great care, and frequently used very expensive pigments. He is particularly renowned for his masterly treatment and use of light in his work.[5]
 					"Almost all his paintings," Hans Koningsberger wrote, "are apparently set in two smallish rooms in his house in Delft; they show the same furniture and decorations in various arrangements and they often portray the same people, mostly women."[6]
@@ -65,7 +65,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>Johannes Vermeer</b> was baptized within the Reformed Church on 31 October 1632.[15][16][a] His mother, Digna Baltens (c. 1596 – 1670[20][21][22]),[b] was from Antwerp.[23][24][25][18][22] Digna's father, Balthasar Geerts,[21] or Gerrits,[22] (born in Antwerp in or around 1573)[21] led an enterprising life, and was arrested for counterfeiting.[21][18] Vermeer's father, named Reijnier Janszoon, was a middle-class worker of silk or caffa (a mixture of silk and cotton or wool).[Note 1] He was the son of Jan Reyersz and Cornelia (Neeltge) Goris.[c] As an apprentice in Amsterdam, Reijnier lived on fashionable Sint Antoniesbreestraat, a street with many resident painters at the time. In 1615, Reijnier married Digna. The couple moved to Delft and had a daughter named Gertruy who was baptized in 1620.[Note 2] In 1625, Reijnier was involved in a fight with a soldier named Willem van Bylandt who died from his wounds five months later.[27] Around this time, Reijnier began dealing in paintings. In 1631, he leased an inn, which he called "The Flying Fox". In 1635, he lived on Voldersgracht 25 or 26. In 1641, he bought a larger inn on the market square, named after the Flemish town "Mechelen". The acquisition of the inn constituted a considerable financial burden.[Huerta 1] When Reijnier died in October 1652, Vermeer took over the operation of the family's art business.
 				</p>
 			</div>
