--- a/artist/leonardo-bio.html
+++ b/artist/leonardo-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>Leonardo Da Vinci</h1>
 		<hr class="leonardo">
-		<a href="leonardo-bio.html" class="btn">Return</a>
+		<a href="leonardo-bio.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>Leonardo Da Vinci, 15 April 1452, Republic of Florence</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>Leonardo da Vinci</b> (English: /ˌliːəˈnɑːrdoʊ də ˈvɪntʃi, ˌliːoʊˈ-, ˌleɪoʊˈ-/;[a] 14/15 April 1452[b] – 2 May 1519)[4] was an Italian polymath of the High Renaissance who is widely considered one of the most diversely talented individuals ever to have lived.[5] While his fame initially rested on his achievements as a painter, he also became known for his notebooks, in which he made drawings and notes on science and invention; these involve a variety of subjects including anatomy, astronomy, botany, cartography, painting, and palaeontology Leonardo's genius epitomized the Renaissance humanist idea,[6] and his collective works compose a contribution to later generations of artists rivalled only by that of his contemporary Michelangelo.[7]
 					Properly named Leonardo di ser Piero da Vinci,[c] Leonardo was born out of wedlock to a notary, Piero da Vinci, and a peasant woman, Caterina, in Vinci, in the region of Florence, Italy. Leonardo was educated in the studio of the renowned Italian painter Andrea del Verrocchio. Much of his earlier working life was spent in the service of Ludovico il Moro in Milan, and he later worked in Rome, Bologna and Venice. He spent his last three years in France, where he died in 1519.
 					Although he had no formal academic training,[8] many historians and scholars regard Leonardo as the prime exemplar of the "Renaissance Man" or "Universal Genius", an individual of "unquenchable curiosity" and "feverishly inventive imagination.
@@ -62,7 +62,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>Leonardo</b> was born on 14/15 April 1452[b] in the Tuscan hill town of Vinci, in the lower valley of the Arno river in the territory of the Medici-ruled Republic of Florence.[20] He was the out-of-wedlock son of Messer Piero Fruosino di Antonio da Vinci, a wealthy Florentine legal notary, and a peasant named Caterina,[d] identified as Caterina Buti del Vacca and more recently as Caterina di Meo Lippi by historian Martin Kemp. There have been many theories regarding Leonardo's mother's identity, including that she was a slave of foreign origin or an impoverished local youth.[19][22][23][24][e] Leonardo had no surname in the modern sense—da Vinci simply meaning "of Vinci"; his full birth name was Lionardo di ser Piero da Vinci,[2][27] meaning "Leonardo, (son) of ser Piero (from) Vinci."[20][c]
 					Leonardo spent his first years in the hamlet of Anchiano in the home of his mother, and from at least 1457 lived in the household of his father, grandparents and uncle in the small town of Vinci.[28] His father had married a 16-year-old girl named Albiera Amadori, who loved Leonardo but died young[29] in 1465 without children. In 1468, when Leonardo was 16, his father married again to 20-year-old Francesca Lanfredini, who also died without children. Piero's legitimate heirs were born from his third wife Margherita di Guglielmo, who gave birth to six children, and his fourth and final wife, Lucrezia Cortigiani, who bore him another six heirs.[30][31] In all, Leonardo had 12 half-siblings, who were much younger than he was (the last was born when Leonardo was 40 years old) and with whom he had very little contact.[f]
 					Leonardo received an informal education in Latin, geometry and mathematics. In later life, Leonardo recorded few distinct childhood incidents. One was of a kite coming to his cradle and opening his mouth with its tail; he regarded this as an omen of his writing on the subject.[33][34] The second occurred while he was exploring in the mountains: he discovered a cave and was both terrified that some great monster might lurk there and driven by curiosity to find out what was inside.[29] He also seems to have remembered some of his childhood observations of water, writing and crossing out the name of his hometown in one of his notebooks on the formation of rivers.[28]
