--- a/artist/picasso-bio.html
+++ b/artist/picasso-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>Pablo Picasso</h1>
 		<hr class="picasso">
-		<a href="picasso.html" class="btn">Return</a>
+		<a href="picasso.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>Pablo Picasso, 25 October 1881, Málaga, Spain</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>Pablo Ruiz Picasso</b>[a][b] (25 October 1881 – 8 April 1973) was a Spanish painter, sculptor, printmaker, ceramicist and theatre designer who spent most of his adult life in France. Regarded as one of the most influential artists of the 20th century, he is known for co-founding the Cubist movement, the invention of constructed sculpture,[6][7] the co-invention of collage, and for the wide variety of styles that he helped develop and explore. Among his most famous works are the proto-Cubist Les Demoiselles d'Avignon (1907), and Guernica (1937), a dramatic portrayal of the bombing of Guernica by German and Italian air forces during the Spanish Civil War.
 					Picasso demonstrated extraordinary artistic talent in his early years, painting in a naturalistic manner through his childhood and adolescence. During the first decade of the 20th century, his style changed as he experimented with different theories, techniques, and ideas. After 1906, the Fauvist work of the slightly older artist Henri Matisse motivated Picasso to explore more radical styles, beginning a fruitful rivalry between the two artists, who subsequently were often paired by critics as the leaders of modern art.[8][9][10][11]					Picasso's work is often categorized into periods. While the names of many of his later periods are debated, the most commonly accepted periods in his work are the Blue Period (1901–1904), the Rose Period (1904–1906), the African-influenced Period (1907–1909), Analytic Cubism (1909–1912), and Synthetic Cubism (1912–1919), also referred to as the Crystal period. Much of Picasso's work of the late 1910s and early 1920s is in a neoclassical style, and his work in the mid-1920s often has characteristics of Surrealism. His later work often combines elements of his earlier styles.	
 				</p>
@@ -61,7 +61,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>Picasso</b> was born at 23:15 on 25 October 1881, in the city of Málaga, Andalusia, in southern Spain.[1] He was the first child of Don José Ruiz y Blasco (1838–1913) and María Picasso y López.[12] Picasso's family was of middle-class background. His father was a painter who specialized in naturalistic depictions of birds and other game. For most of his life, Ruiz was a professor of art at the School of Crafts and a curator of a local museum.[13] Ruiz's ancestors were minor aristocrats.
 					Picasso's birth certificate and the record of his baptism include very long names, combining those of various saints and relatives.[a][c] Ruiz y Picasso were his were paternal and maternal surnames, respectively, per Spanish custom. The surname "Picasso" comes from Liguria, a coastal region of north-western Italy; its capital is Genoa.[15] There was a painter from the area named Matteo Picasso [it] (1794–1879), born in Recco (Genoa), of late neoclassical style portraiture,[15] though investigations have not definitively determined his kinship with the branch of ancestors related to Pablo Picasso. The direct branch from Sori, Liguria (Genoa), can be traced back to Tommaso Picasso (1728–1813). His son Giovanni Battista, married to Isabella Musante, was Pablo's great-great-grandfather. Of this marriage was born Tommaso (Sori, 1787–Málaga, 1851). Pablo's maternal great-grandfather, Tommaso Picasso moved to Spain around 1807.[15]
 					Picasso showed a passion and a skill for drawing from an early age. According to his mother, his first words were "piz, piz", a shortening of lápiz, the Spanish word for "pencil".[16] From the age of seven, Picasso received formal artistic training from his father in figure drawing and oil painting. Ruiz was a traditional academic artist and instructor, who believed that proper training required disciplined copying of the masters, and drawing the human body from plaster casts and live models. His son became preoccupied with art to the detriment of his classwork.
