--- a/artist/vangogh-bio.html
+++ b/artist/vangogh-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>Vincent Van Gogh</h1>
 		<hr class="vangogh">
-		<a href="vangogh.html" class="btn">Return</a>
+		<a href="vangogh.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>Vincent Willem van Gogh, 30 March 1853, Zundert, Netherlands</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>Vincent Willem van Gogh</b> (Dutch: [ˈvɪnsənt ˈʋɪləm vɑŋ ˈɣɔx] (About this soundlisten);[note 1] 30 March 1853 – 29 July 1890) was a Dutch post-impressionist painter who posthumously became one of the most famous and influential figures in the history of Western art. In a decade, he created about 2,100 artworks, including around 860 oil paintings, most of which date from the last two years of his life. They include landscapes, still lifes, portraits and self-portraits, and are characterised by bold colours and dramatic, impulsive and expressive brushwork that contributed to the foundations of modern art. He was not commercially successful, and his suicide at 37 came after years of mental illness, depression and poverty.
 					Born into an upper-middle-class family, Van Gogh drew as a child and was serious, quiet, and thoughtful. As a young man he worked as an art dealer, often travelling, but became depressed after he was transferred to London. He turned to religion and spent time as a Protestant missionary in southern Belgium. He drifted in ill health and solitude before taking up painting in 1881, having moved back home with his parents. His younger brother Theo supported him financially, and the two kept a long correspondence by letter. His early works, mostly still lifes and depictions of peasant labourers, contain few signs of the vivid colour that distinguished his later work. In 1886, he moved to Paris, where he met members of the avant-garde, including Émile Bernard and Paul Gauguin, who were reacting against the Impressionist sensibility.
 				</p>
@@ -61,7 +61,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>Vincent Willem van Gogh</b> was born on 30 March 1853 in Groot-Zundert, in the predominantly Catholic province of North Brabant in the Netherlands.[24] He was the oldest surviving child of Theodorus van Gogh (1822–1885), a minister of the Dutch Reformed Church, and his wife Anna Cornelia Carbentus (1819–1907). Van Gogh was given the name of his grandfather and of a brother stillborn exactly a year before his birth.[note 2] Vincent was a common name in the Van Gogh family: his grandfather, Vincent (1789–1874), who received a degree in theology at the University of Leiden in 1811, had six sons, three of whom became art dealers. This Vincent may have been named after his own great-uncle, a sculptor (1729–1802).[26]
 					Van Gogh's mother came from a prosperous family in The Hague,[27] and his father was the youngest son of a minister.[28] The two met when Anna's younger sister, Cornelia, married Theodorus's older brother Vincent (Cent). Van Gogh's parents married in May 1851 and moved to Zundert.[29] His brother Theo was born on 1 May 1857. There was another brother, Cor, and three sisters: Elisabeth, Anna, and Willemina (known as "Wil"). In later life Van Gogh remained in touch only with Willemina and Theo.[30] Van Gogh's mother was a rigid and religious woman who emphasised the importance of family to the point of claustrophobia for those around her.[31] Theodorus's salary was modest, but the Church supplied the family with a house, a maid, two cooks, a gardener, a carriage and horse, and Anna instilled in the children a duty to uphold the family's high social position.[32]
 					Van Gogh was a serious and thoughtful child.[33] He was taught at home by his mother and a governess and in 1860 was sent to the village school. In 1864, he was placed in a boarding school at Zevenbergen,[34] where he felt abandoned, and he campaigned to come home. Instead, in 1866 his parents sent him to the middle school in Tilburg, where he was deeply unhappy.[35] His interest in art began at a young age. He was encouraged to draw as a child by his mother,[36] and his early drawings are expressive,[34] but do not approach the intensity of his later work.[37] Constant Cornelis Huijsmans, who had been a successful artist in Paris, taught the students at Tilburg. His philosophy was to reject technique in favour of capturing the impressions of things, particularly nature or common objects. Van Gogh's profound unhappiness seems to have overshadowed the lessons, which had little effect.[38] In March 1868, he abruptly returned home. He later wrote that his youth was "austere and cold, and sterile".[39]					
