--- a/artist/jan-van-bio.html
+++ b/artist/jan-van-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>Jan Van Eyck</h1>
 		<hr class="jve">
-		<a href="jan-van.html" class="btn">Return</a>
+		<a href="jan-van.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>Jan van Eyck, before 1390 or 1395, Maaseik</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>Jan van Eyck</b> (/væn ˈaɪk/ van EYEK, Dutch: [ˈjɑn vɑn ˈɛik]; c.  before 1390 – 9 July 1441) was a painter active in Bruges who was one of the early innovators of what became known as Early Netherlandish painting, and one of the most significant representatives of Early Northern Renaissance art. The surviving records indicate that he was born around 1380–1390, most likely in Maaseik (then Maaseyck, hence his name), in present-day Belgium. He took employment in the Hague around 1422 when he was already a master painter with workshop assistants, and was employed as painter and valet de chambre with John III the Pitiless, ruler of Holland and Hainaut. After John's death in 1425, he was later appointed as court painter to Philip the Good, Duke of Burgundy, working in Lille until he moved to Bruges in 1429 where he lived until his death. He was highly regarded by Philip and undertook a number of diplomatic visits abroad, including to Lisbon in 1428 to explore the possibility of a marriage contract between the duke and Isabella of Portugal.[1]
 					About 20 surviving paintings are confidently attributed to him, as well as the Ghent Altarpiece and the illuminated miniatures of the Turin-Milan Hours, all dated between 1432 and 1439. Ten are dated and signed with a variation of his motto ALS ICH KAN (As I (Eyck) can), a pun on his name, which he typically painted in Greek characters.	
 				</p>
@@ -61,7 +61,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>Jan van Eyck's</b> early life and neither the date nor place of his birth is documented. The first extant record of his life comes from the court of John of Bavaria at The Hague where, between 1422 and 1424, payments were made to Meyster Jan den malre (Master Jan the painter) who was then a court painter with the rank of valet de chambre, with at first one and then two assistants.[5] This suggests a date of birth of 1395 at the latest. However, his apparent age in the London probable self-portrait of 1433 suggests to most scholars a date closer to 1380.[3] He was identified in the late 16th century as having been born in Maaseik, a borough of the prince-bishopric of Liège.[6] His last name however is related to the place Bergeijk, due to genealogical information related to the coat-of-arms with three millrinds; that information also implies that he stems from the Lords of Rode (Sint-Oedenrode). Elisabeth Dhanens rediscovered in the quarterly state "the fatherly blazon, in gold, three millrinds of lauric acid", similar to other families that descend from the Lords of Rode in the quarter of Peelland in the 'meierij van's-Hertogenbosch'. His daughter Lievine was in a nunnery in Maaseik after her father's death.The notes on his preparatory drawing for Portrait of Cardinal Niccolò Albergati are written in the Maasland dialect.[7]
 				</p>
 			</div>
