--- a/artist/rembrandt-bio.html
+++ b/artist/rembrandt-bio.html
@@ -37,7 +37,7 @@
     <div class="artist container my-3">
 		<h1>Rembrandt</h1>
 		<hr class="rembrant">
-		<a href="rembrandt.html" class="btn">Return</a>
+		<a href="rembrandt.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
@@ -49,7 +49,7 @@
 				<p>Rembrandt Harmenszoon van Rijn, 15 July 1606, Dutch Republic</p>	
 			</div>
 			<div class="col-10">
-				<p>
+				<p class="pfont">
 					<b>Rembrandt Harmenszoon van Rijn</b> (/ˈrɛmbrɑːnt/, also /-brænt/,[2] Dutch: [ˈrɛmbrɑnt ˈɦɑrmə(n)soːn vɑn ˈrɛin] (About this soundlisten); 15 July 1606[1] – 4 October 1669) was a Dutch draughtsman, painter, and printmaker. An innovative and prolific master in three media,[3] he is generally considered one of the greatest visual artists in the history of art and the most important in Dutch art history.[4] Unlike most Dutch masters of the 17th century, Rembrandt's works depict a wide range of style and subject matter, from portraits and self-portraits to landscapes, genre scenes, allegorical and historical scenes, and biblical and mythological themes as well as animal studies. His contributions to art came in a period of great wealth and cultural achievement that historians call the Dutch Golden Age, when Dutch art (especially Dutch painting), although in many ways antithetical to the Baroque style that dominated Europe, was extremely prolific and innovative and gave rise to important new genres. Like many artists of the Dutch Golden Age, such as Jan Vermeer of Delft, Rembrandt was also an avid art collector and dealer.
 					Rembrandt never went abroad, but he was considerably influenced by the work of the Italian masters and Netherlandish artists who had studied in Italy, like Pieter Lastman, the Utrecht Caravaggists, Flemish Baroque, and Peter Paul Rubens. After he achieved youthful success as a portrait painter, Rembrandt's later years were marked by personal tragedy and financial hardships. Yet his etchings and paintings were popular throughout his lifetime, his reputation as an artist remained high.
 				</p>
@@ -61,7 +61,7 @@
 		<h3>Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
-				<p>
+				<p class="pfont">
 					<b>Rembrandt</b> was born on 15 July 1606 in Leiden,[1] in the Dutch Republic, now the Netherlands. He was the ninth child born to Harmen Gerritszoon van Rijn and Neeltgen Willemsdochter van Zuijtbrouck.[11] His family was quite well-to-do; his father was a miller and his mother was a baker's daughter. Religion is a central theme in Rembrandt's works and the religiously fraught period in which he lived makes his faith a matter of interest. His mother was Roman Catholic, and his father belonged to the Dutch Reformed Church. While his work reveals deep Christian faith, there is no evidence that Rembrandt formally belonged to any church, although he had five of his children christened in Dutch Reformed churches in Amsterdam: four in the Oude Kerk (Old Church) and one, Titus, in the Zuiderkerk (Southern Church).[12]
 					As a boy he attended Latin school. At the age of 14, he was enrolled at the University of Leiden, although according to a contemporary he had a greater inclination towards painting; he was soon apprenticed to a Leiden history painter, Jacob van Swanenburg, with whom he spent three years.[13] After a brief but important apprenticeship of six months with the painter Pieter Lastman in Amsterdam, Rembrandt stayed a few months with Jacob Pynas and then started his own workshop, though Simon van Leeuwen claimed that Joris van Schooten taught Rembrandt in Leiden.[13][14] Unlike many of his contemporaries who traveled to Italy as part of their artistic training, Rembrandt never left the Dutch Republic during his lifetime.[15][16]
 				</p>
