--- a/artist/leonardo-bio.html
+++ b/artist/leonardo-bio.html
@@ -11,38 +11,43 @@
 	<link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- nav start -->
-    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+     <nav class="navbar navbar-expand-lg navbar-light shadow" id="nav">
          <div class="container">
             <img src="../image/logo2.png" class="logo_img" width="100" height="70">
-            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <a href="" class="navbar-brand logo me-auto px-3" id="name">
+               <h3>Heaven's Secret</h3>
+            </a>
             <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
                <ul class="navbar-nav nav-fill ms-auto">
                   <li class="nav-item mx-4"><a href="../index.html" class="nav-link">Home</a></li>
-                  <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li> 
+                  <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li>
                   <li class="nav-item mx-4"><a href="../gallery.html" class="nav-link">Gallery</a></li>
                   <li class="nav-item mx-4"><a href="../about.html" class="nav-link">About</a></li>
                   <li class="nav-item mx-4"><a href="../contact.html" class="nav-link">Contact</a></li>
                </ul>
             </div>
          </div>
-    </nav>
-    <!-- nav end -->
+     </nav>
+     <!-- nav end -->
 
     <div class="artist container my-3">
-		<h1>Leonardo Da Vinci</h1>
+		<h1 class="titlefont">Leonardo Da Vinci</h1>
 		<hr class="leonardo">
 		<a href="leonardo-bio.html" class="btn btn-info">Return</a>
 	</div>
 
 	<!-- bio graphy start-->
 	<div class="container my-0  py-3">
-		<h3>Leonardo Da Vinci</h3>
+		<h3 class="titlefont">Leonardo Da Vinci</h3>
 		<div class="row mt-3">
 			<div class="col-2">
 				<img src="../image/Leonardo da Vinci/Leonardo da Vinci.jpg" class="img-fluid">
@@ -59,7 +64,7 @@
 	</div>
 	<hr class="container">
 	<div class="container my-0 py-3">
-		<h3>Birth and childhood</h3>
+		<h3 class="titlefont">Birth and childhood</h3>
 		<div class="row mt-3">			
 			<div class="col-12">
 				<p class="pfont">
@@ -74,14 +79,14 @@
 	<!-- bio graphy end -->
 
 	<!-- footer start -->
-    <footer class="container-fluid bg-dark text-center mt-5">
+      <footer class="container-fluid text-center mt-5" id="ft">
          <div class="py-5">
-            <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
-            <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
-            <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
-            <a href="../about.html" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
-            <a href="../contact.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
-            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+            <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
+            <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
+            <a href="../about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
+            <a href="../contact.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Contact</a>
+            <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
             <p class="text-muted">
                <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
                <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
@@ -89,8 +94,8 @@
                <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
             </p>
          </div>
-    </footer>
-    <!-- footer end -->
+      </footer>
+      <!-- footer end -->>
 
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
